# helm-charts

./: .gitignore  README.md  index.yaml
.github/workflows/: release.yaml
charts/acme/: Chart.yaml  values.yaml
charts/acme/files/: acme.sh  dns_neuro.sh  neuro.sh
charts/acme/templates/: _helpers.tpl  config-map.yaml  deployment.yaml  pvc.yaml  rbac.yaml  secret.yaml
charts/admission-controller-lib/: Chart.yaml  README.md  values.yaml
charts/admission-controller-lib/src/: .gitignore  Dockerfile  pyproject.toml
charts/admission-controller-lib/src/hooks/: __main__.py  kube.py  post_install.py  pre_install.py
charts/admission-controller-lib/templates/: _helpers.tpl  _postinstall-job.tpl  _postinstall-rbac.tpl  _preinstall-job.tpl  _preinstall-rbac.tpl  _rbac.tpl
charts/docker-registry/: Chart.yaml  values.yaml
charts/docker-registry/templates/: deployment.yaml
charts/k8s-resources/: Chart.yaml
charts/k8s-resources/templates/: _ingress.tpl
charts/minio/: Chart.yaml  values.yaml
charts/minio-gateway/: Chart.yaml  values-dev.yaml  values.yaml
charts/minio-gateway/templates/: _helpers.tpl  deployment.yaml  extra-secrets.yaml  hpa.yaml  ingress.yaml  secret.yaml  (+2 more)
charts/nfs-server/: Chart.yaml  values.yaml
charts/observability/: Chart.yaml  README.md  values.yaml
charts/observability-logs/: Chart.yaml  README  values.yaml
charts/postgres-db-init/: Chart.yaml  values.yaml
charts/postgres-db-init-script/: Chart.yaml
charts/reverse-proxy/: values.yaml
charts/thanos/: Chart.yaml
charts/vcluster/: .helmignore  Chart.yaml  values.yaml
(+43 files in other folders)
